2005-09-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/interval.h :
	* lib/network.c :
	* lib/network.h :
	* lib/rel.c ;
	* lib/rel.h :
	* lib/rlist.c :
	* lib/rlist.h :
	* lib/rqueue.c :
	* lib/rqueue.h :
	* test/test.c :

	  - Added a "type" parameter in interval. This is really an id, i.e.
	    "id" and "type" together uniquely identifies an interval. This
	    allows for internal intervals to be defined which is transparent
	    from the network interface.

2005-09-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/interval.h :

	  - Changed type of ep_mask from unsigned int to unsigned char.

	* lib/network.c :
	* lib/network.h :
	* lib/rel.c :
	* lib/rel.h :
	* lib/rqueue.c :
	* lib/rqueue.h :
	* test/test.c :

	  - Removed tbe_rel structure. Everything is back to using 2 ids and a
	    relset. Cleaner this way. It was a bloody stupid idea to have
	    tbe_rel.

	  - Moved the normalise() function to rqueue since it is the only
	    module that uses it.

2005-08-31  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/network.c :
	* lib/network.h :
	* lib/rel.c :
	* lib/rel.h :
	* lib/rlist.c :
	* lib/rlist.h :
	* lib/rqueue.c :
	* lib/rqueue.h :

	  - Cleanup. Mostly changing int_id's to simply id's.

2005-08-30  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/network.c :
	* lib/network.h :

	  - Redefined the tbe_net structure as void *. Internally, this is
	    defined as a structure. At the moment, it only contains a single
	    field -- the original list. In the future, additional fields will
	    be added.

2005-08-29  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/rlist.c :
	* lib/rlist.h :

	  - Parameter cleanup.

2005-08-29  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.3.1

	* lib/rqueue.c :
	* lib/rqueue.h :
	* lib/iqueue.c :
	* lib/iqueue.h :

	  - Dequeue function now requires that all fields are given.
