@@ -1,5 +1,9 @@
 2005-09-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/interval.h:
+
+	  - Added a macro for checking equality between two intervals.
+
 	* lib/interval.h :
 	* lib/network.c :
 	* lib/network.h :
